Arreglo navbars y creacion de json

--- a/lista-productos.html
+++ b/lista-productos.html
@@ -15,7 +15,7 @@
     <nav class="navbar bg-dark p-3">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img src="./icons/Search.svg" alt="Logo" width="36" height="30">
+                <img src="./img/logo-lego.png" alt="Logo" width="70" height="70">
             </a>
             <form class="d-flex search" role="search">
                 <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -25,13 +25,34 @@
             </form>
             <div class="justify-content-end">
                 <button class="btn me-2" type="button">
-                    <img class="btn-navbar" src="./icons/Search.svg" alt="Search">
+                    <img class="btn-navbar" src="./icons/profile.svg" alt="Search">
                 </button>
                 <button class="btn" type="button">
                     <img class="btn-navbar" src="./icons/shopping-cart.svg" alt="Search">
                 </button>
             </div>
-            
+
+        </div>
+    </nav>
+
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-warning p-3 fs-5">
+        <div class="collapse navbar-collapse container-fluid justify-content-center">
+            <ul class="navbar-nav justify-content-evenly" style="width: 75%;">
+                <li class="nav-item">
+                    <a class="nav-link active nav-animation" aria-current="page" href="#">Discover</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active nav-animation" href="#">Shop</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active nav-animation" href="#">Help</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active nav-animation" href="#">About Us</a>
+                </li>
+            </ul>
+
         </div>
     </nav>
 
