--- a/lista-productos.html
+++ b/lista-productos.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Link boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/main-style.css">
     <link rel="stylesheet" href="css/producto.css">
-    <title>Discover</title>
+    <title>Shop</title>
 </head>
 
 <body>
@@ -77,11 +78,10 @@
 
     <main class="container-fluid p-3">
         <!-- Inicio filtros -->
-         <!-- <div class="d-flex"> -->
 
-            
-            <!-- SEGUNDO FILTRO QUE NO FUNCIONO -->
-            <!-- <div class="input-group mb-3 justify-content-center">          
+         <!-- SEGUNDO FILTRO QUE NO FUNCIONO -->
+         <!-- <div class="d-flex">
+            <div class="input-group mb-3 justify-content-center">          
                 <input type="checkbox" class="btn-check input-group-text" name="options-base" id="option5" autocomplete="off" checked>
                 <label class="btn btn-outline-primary rounded-start" for="option5">Architecture</label>
     
@@ -106,7 +106,7 @@
 
         <!-- Inicio card -->
         <div id="lego-list" class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
-            <div class="col product">
+            <div class="col">
                 <div class="card shadow-sm text-center">
                     <!-- Inicio Carrusel -->
                     <div id="carouselExample" class="carousel slide">
@@ -119,13 +119,13 @@
                         <div class="carousel-inner">
                             <div class="carousel-item active container-img">
                                 <a href="">
-                                    <img src="img/image-not-found.jpg" class="d-block w-100" alt="Image not found">
+                                    <img src="img/image-not-found.jpg" class="d-block w-100" alt="">
                                 </a>
                             </div>
 
                             <div class="carousel-item container-img">
                                 <a href="">
-                                    <img src="img/image-not-found.jpg" class="d-block w-100" alt="Image not found">
+                                    <img src="img/image-not-found.jpg" class="d-block w-100" alt="">
                                 </a>
                             </div>
                         </div>
@@ -141,11 +141,9 @@
                         </button>
                     </div>
                     <!-- Fin carrusel -->
-                    <a class="link-animation" href="">
                         <div class="card-header">
-                            <h4 class="card-title title-excesive">Title Lego</h4>
+                            <h4 class="card-title title-excesive link-animation">Title Lego</h4>
                         </div>
-                    </a>
 
                     <div class="card-body">
                         <div class="d-flex justify-content-evenly">
@@ -158,7 +156,7 @@
 
                         <div class="d-grid gap-2">
                             <a href="">
-                                <button type="button" class="btn btn-lg btn-primary">Add to cart</button>
+                                <button type="button" class="btn btn-lg btn-primary w-100">Add to cart</button>
                             </a>
 
                         </div>
@@ -170,7 +168,7 @@
         <!--Fin Card-->
     </main>
 
-    <!-- Bopstrap -->
+    <!-- Boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
