--- a/lista-productos.html
+++ b/lista-productos.html
@@ -71,6 +71,9 @@
                 <li class="nav-item">
                     <a class="nav-link active nav-animation" href="#">About Us</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active nav-animation" href="#">Contact Us</a>
+                </li>
             </ul>
 
         </div>
