--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <a href="lista-productos.html">Productos</a>
 
-    
+    <a href="preguntas-frecuentes.html">Preguntas</a>
+
 </body>
 </html>
