Cambios en preguntas frecuentes

--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -11,17 +11,32 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <title>Common Questions</title>
+    <style>
+        .img-text-container {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+        }
+        .img-text-container img {
+            max-width: 100%;
+            height: auto;
+        }
+        .img-text-container .text {
+            flex: 1;
+            padding: 10px;
+        }
+    </style>
 </head>
 
 <body>
     <h2 class="mb-5 ms-5">Frequently asked questions</h2>
     <!-- Pregunta 1 -->
-    <div class="cajon-sombra mb-5">
-        <div class="row justify-content-center">
-            <h3 class="text-center mt-5 mb-0">What are the age recommendations for LEGO sets?</h3>
-            <hr style="width: 80%;">
-            <div class="col-sm-5 fs-5 lh-base align-self-center ms-4 me-4">
-                <p>LEGO sets come with specific age recommendations to ensure they are appropriate for different
+    <div class="container cajon-sombra p-4">
+        <h2 class="text-center mb-5">Título del Artículo</h2>
+        <div class="img-text-container">
+            <div class="text">
+                
+                <p class="fs-5">LEGO sets come with specific age recommendations to ensure they are appropriate for different
                     skill levels and adhere to safety standards. These recommendations are carefully determined based on
                     the
                     complexity of the build, the size of the pieces, and the themes involved. For instance, sets
@@ -30,26 +45,44 @@
                     choking hazard.
                     On the other hand, sets aimed at older children and adults may include smaller, more intricate
                     pieces and
-                    more complex instructions.
-                </p>
-                <p>
-                    You can find the age recommendations prominently displayed on the box or in the product description.
-                    This information helps parents and gift-givers choose sets that are not only safe but also engaging
-                    and
-                    challenging for the intended age group. Following these guidelines ensures that builders of all ages
-                    can
-                    enjoy a fun and rewarding LEGO experience.
-                </p>
+                    more complex instructions.</p>
             </div>
-            <div class="container-img col-sm-6">
-                <img src="https://www.lego.com/cdn/cs/set/assets/blt0230afd35d14fcc5/10984_alt10.png?format=webply&fit=bounds&quality=70&width=800&height=800&dpr=1.5"
-                    alt="girl playing with legos">
-            </div>
+            <img src="https://www.lego.com/cdn/cs/service/assets/bltff03fbbc7d76728f/LEGO_Builder_app_-_BI_Page_Image.jpg" alt="Imagen de ejemplo" class="img-fluid">
+
         </div>
     </div>
 
+
+
+
+    <!-- 
+    <p>LEGO sets come with specific age recommendations to ensure they are appropriate for different
+        skill levels and adhere to safety standards. These recommendations are carefully determined based on
+        the
+        complexity of the build, the size of the pieces, and the themes involved. For instance, sets
+        designed for
+        younger children typically feature larger bricks that are easier to handle and pose less of a
+        choking hazard.
+        On the other hand, sets aimed at older children and adults may include smaller, more intricate
+        pieces and
+        more complex instructions.
+    </p>
+    <p>
+        You can find the age recommendations prominently displayed on the box or in the product description.
+        This information helps parents and gift-givers choose sets that are not only safe but also engaging
+        and
+        challenging for the intended age group. Following these guidelines ensures that builders of all ages
+        can
+        enjoy a fun and rewarding LEGO experience.
+    </p> -->
+
+
+
+
+
+
     <!-- Pregunta 2 -->
-    <div class="cajon-sombra mb-5">
+    <!-- <div class="cajon-sombra mb-5">
         <div class="row justify-content-center">
             <h3 class="text-center mt-5 mb-0">How can I find building instructions for my LEGO set?</h3>
             <hr style="width: 80%;">
@@ -76,7 +109,7 @@
                 </p>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <!-- Pregunta 3 -->
 
