--- a/preguntas-frecuentes.html
+++ b/preguntas-frecuentes.html
@@ -11,114 +11,157 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <title>Common Questions</title>
-    <style>
-        .img-text-container {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-        }
-        .img-text-container img {
-            max-width: 100%;
-            height: auto;
-        }
-        .img-text-container .text {
-            flex: 1;
-            padding: 10px;
-        }
-    </style>
 </head>
 
 <body>
-    <h2 class="mb-5 ms-5">Frequently asked questions</h2>
-    <!-- Pregunta 1 -->
-    <div class="container cajon-sombra p-4">
+
+    <!-- Maquetacion de cada cuadro de pregunta -->
+    <!-- <div class="container cajon-sombra p-4 mb-5 mt-5">
         <h2 class="text-center mb-5">Título del Artículo</h2>
         <div class="img-text-container">
             <div class="text">
-                
-                <p class="fs-5">LEGO sets come with specific age recommendations to ensure they are appropriate for different
-                    skill levels and adhere to safety standards. These recommendations are carefully determined based on
-                    the
-                    complexity of the build, the size of the pieces, and the themes involved. For instance, sets
-                    designed for
-                    younger children typically feature larger bricks that are easier to handle and pose less of a
-                    choking hazard.
-                    On the other hand, sets aimed at older children and adults may include smaller, more intricate
-                    pieces and
-                    more complex instructions.</p>
-            </div>
-            <img src="https://www.lego.com/cdn/cs/service/assets/bltff03fbbc7d76728f/LEGO_Builder_app_-_BI_Page_Image.jpg" alt="Imagen de ejemplo" class="img-fluid">
+                <p class="fs-5">
 
+                </p>
+            </div>
+            <img src="https://www.lego.com/cdn/cs/service/assets/bltff03fbbc7d76728f/LEGO_Builder_app_-_BI_Page_Image.jpg" 
+            alt="Imagen de ejemplo" 
+            class="img-fluid">
+        </div>
+    </div> -->
+
+    <h2 class="mb-5 ms-5 mt-5">Frequently asked questions</h2>
+    <!-- Pregunta 1 -->
+    <div class="container cajon-sombra p-4 mb-5 mt-5">
+        <h2 class="text-center mb-5">What are the age recommendations for LEGO sets?</h2>
+        <div class="img-text-container">
+            <div class="text">
+                <p class="fs-5">
+                    LEGO sets come with specific age recommendations to ensure they are appropriate for different skill
+                    levels and adhere to safety standards. These recommendations are clearly indicated on the box or in
+                    the product description.
+                </p>
+            </div>
+            <img src="img/common questions/Question 1.jpg" alt="Boy playing with Legos" class="img-fluid"
+                style="max-width: 60%;">
+        </div>
+    </div>
+
+    <!-- Pregunta 2 -->
+    <div class="container cajon-sombra p-4 mb-5 mt-5">
+        <h2 class="text-center mb-5">How can I find building instructions for my LEGO set?</h2>
+        <div class="img-text-container">
+            <img src="img/common questions/Question 2.jpg" alt="Tablet with the Lego app" class="img-fluid">
+            <div class="text">
+                <p class="fs-5 text-end">
+                    To find building instructions for your LEGO set, you can visit the official LEGO website, which has
+                    a vast database of instructions for both new and older sets. Simply enter the set number or name in
+                    the search bar to access the PDF instructions. Alternatively, you can use the LEGO Builder app,
+                    which offers an interactive experience with features like 3D viewing, zooming, and rotating, making
+                    it easier to follow the building steps. Both options ensure you have all the guidance you need to
+                    complete your LEGO creations.
+                </p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Pregunta 3 -->
+    <div class="container cajon-sombra p-4 mb-5 mt-5">
+        <h2 class="text-center mb-5">What should I do if I am missing a piece from my LEGO set?</h2>
+        <div class="img-text-container">
+            <div class="text">
+                <p class="fs-5">
+                    If you discover that a piece is missing from your LEGO set, you can easily request a replacement
+                    through the Customer Service email lego.support@gmail.com. Simply provide the set number and details
+                    of the missing piece, and LEGO will send you the replacement part free of charge. This ensures you
+                    can complete your build without any interruptions.
+                </p>
+            </div>
+            <img src="img/common questions/Question 3.jpg" alt="World Lego" class="img-fluid">
+        </div>
+    </div>
+
+    <!-- Pregunta 4 -->
+    <div class="container cajon-sombra p-4 mb-5 mt-5">
+        <h2 class="text-center mb-5">Where can I buy individual LEGO bricks?</h2>
+        <div class="img-text-container">
+            <img src="img/common questions/Question 4.jpg" alt="A bunch of Legos" class="img-fluid">
+            <div class="text">
+                <p class="fs-5 text-end">
+                    You can buy individual LEGO bricks through the "Brick Link" website, where you
+                    can search for specific pieces you need. Additionally, visiting a LEGO store allows you to use the
+                    Pick a Brick wall, where you can select and purchase bricks in person. Both options provide a
+                    convenient way to find the exact pieces you need for your LEGO creations.
+                </p>
+            </div>
         </div>
     </div>
 
 
-
-
-    <!-- 
-    <p>LEGO sets come with specific age recommendations to ensure they are appropriate for different
-        skill levels and adhere to safety standards. These recommendations are carefully determined based on
-        the
-        complexity of the build, the size of the pieces, and the themes involved. For instance, sets
-        designed for
-        younger children typically feature larger bricks that are easier to handle and pose less of a
-        choking hazard.
-        On the other hand, sets aimed at older children and adults may include smaller, more intricate
-        pieces and
-        more complex instructions.
-    </p>
-    <p>
-        You can find the age recommendations prominently displayed on the box or in the product description.
-        This information helps parents and gift-givers choose sets that are not only safe but also engaging
-        and
-        challenging for the intended age group. Following these guidelines ensures that builders of all ages
-        can
-        enjoy a fun and rewarding LEGO experience.
-    </p> -->
-
-
-
-
-
-
-    <!-- Pregunta 2 -->
-    <!-- <div class="cajon-sombra mb-5">
-        <div class="row justify-content-center">
-            <h3 class="text-center mt-5 mb-0">How can I find building instructions for my LEGO set?</h3>
-            <hr style="width: 80%;">
-            <div class="container-img col-sm-6">
-                <img src="https://www.lego.com/cdn/cs/service/assets/bltff03fbbc7d76728f/LEGO_Builder_app_-_BI_Page_Image.jpg"
-                    alt="Kids using instructions">
-            </div>
-            <div class="responsive-text col-sm-5 fs-5 lh-base align-self-center ms-4 me-4">
-                <p>If you’re looking for building instructions for your LEGO set, there are a couple of convenient
-                    options available to you.
-                    Firstly, you can visit the official LEGO website, where you can download instructions for thousands
-                    of LEGO sets.
-                    The website has a comprehensive database that allows you to search for your specific set by entering
-                    the set number
-                    or name. This is particularly useful if you’ve misplaced the original instructions or if you prefer
-                    a digital version.
+    <!-- Pregunta 5 -->
+    <div class="container cajon-sombra p-4 mb-5 mt-5">
+        <h2 class="text-center mb-5">Are there any LEGO events or exhibitions I can attend?</h2>
+        <div class="img-text-container">
+            <div class="text">
+                <p class="fs-5 text-end">
+                    Yes, LEGO frequently hosts events and exhibitions that cater to fans of all ages. These events
+                    often include interactive building activities, displays of impressive LEGO creations, and
+                    opportunities to meet other LEGO enthusiasts. Whether you’re interested in large conventions or
+                    smaller local gatherings, there’s likely an event that will spark your creativity and passion for
+                    LEGO.
                 </p>
-                <p>Additionally, LEGO offers a dedicated app called the LEGO Building Instructions app. This app is
-                    available for both iOS
-                    and Android devices and provides an easy way to access building instructions on the go. The app not
-                    only includes step-by-step
-                    instructions but also offers interactive features, such as 3D viewing and zooming, which can enhance
-                    your building experience.
+            </div>
+            <img src="img/common questions/Question 5.jpg" alt="Jazz Quartet Lego" class="img-fluid">
+        </div>
+    </div>
+
+    <!-- Pregunta 6 -->
+    <div class="container cajon-sombra p-4 mb-5 mt-5">
+        <h2 class="text-center mb-5">Can I recycle my old LEGO bricks?</h2>
+        <div class="img-text-container">
+            <img src="img/common questions/Question 6.jpg" alt="Wooden Minifigure" class="img-fluid">
+            <div class="text">
+                <p class="fs-5 text-end">
+                    Yes, you can recycle your old LEGO bricks through the LEGO Replay program. This initiative allows
+                    you to donate your used bricks, which are then cleaned and redistributed to children in need. By
+                    participating, you help give your LEGO bricks a new life and bring joy to kids who can benefit from
+                    creative play.
                 </p>
             </div>
         </div>
-    </div> -->
+    </div>
 
-    <!-- Pregunta 3 -->
-
-    <!-- Pregunta 4 -->
-    <!-- Pregunta 5 -->
-    <!-- Pregunta 6 -->
     <!-- Pregunta 7 -->
+    <div class="container cajon-sombra p-4 mb-5 mt-5">
+        <h2 class="text-center mb-5">How can I share my LEGO creations with the community?</h2>
+        <div class="img-text-container">
+            <div class="text">
+                <p class="fs-5 text-end">
+                    You can share your LEGO creations with the community through various platforms. One popular way is
+                    to join LEGO Ideas, where you can submit your designs and potentially see them turned into official
+                    LEGO sets if they gain enough support. Additionally, you can share photos and videos of your builds
+                    on social media using hashtags like #LEGO or #LEGOCreations to reach a wider audience.
+                </p>
+            </div>
+            <img src="img/common questions/Question 7.jpg" alt="Tales of the Space LEGO" class="img-fluid">
+        </div>
+    </div>
+
     <!-- Pregunta 8 -->
-    <!-- Pregunta 9 -->
+    <div class="container cajon-sombra p-4 mb-5 mt-5">
+        <h2 class="text-center mb-5">What is the largest LEGO set with the most pieces?</h2>
+        <div class="img-text-container">
+            <img src="img/common questions/Question 8.jpg" alt="LEGO Art World Map" class="img-fluid">
+            <div class="text">
+                <p class="fs-5 text-end">
+                    The largest LEGO set by piece count is the LEGO Art World Map, which contains an impressive 11,695
+                    pieces. This set allows you to create a detailed and customizable map of the world, making it a
+                    unique and engaging project for LEGO enthusiasts. The high piece count provides a challenging and
+                    rewarding building experience, perfect for those who enjoy intricate and large-scale builds.
+                </p>
+            </div>
+        </div>
+    </div>
 
     <!-- Boostrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
