Creacion de acerca de

--- a/detalle-productos.html
+++ b/detalle-productos.html
@@ -148,6 +148,7 @@
                             <li id="Deep">Deep:</li>
                         </ul>
                         <p class="fs-5">Please read our <a target="_blank" href="documents/Deliveries and returns policies.pdf">Deliveries and returns</a> policies before buying your order</p>
+                        <p id="instructions" class="fs-5"> Here is also the <a href="">set instructions</a>, enjoy!</p>
                     </div>
                 </div>
             </div>
