--- a/lista-productos.html
+++ b/lista-productos.html
@@ -43,7 +43,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">
+                            <a class="nav-link active" href="cart.html">
                                 <img class="btn-navbar" src="./icons/shopping-cart.svg" alt="shopping-cart">
                             </a>
                         </li>
@@ -158,9 +158,7 @@
                         <h1 class="card-title">&dollar;100000</h1>
 
                         <div class="d-grid gap-2">
-                            <a href="">
-                                <button type="button" class="btn btn-lg btn-primary w-100">Add to cart</button>
-                            </a>
+                                <button id="cart-button" type="button" class="btn btn-lg btn-primary w-100">Add to cart</button>
 
                         </div>
 
@@ -183,6 +181,8 @@
     <!-- Js -->
      <script src="js/lista-legos.js"></script>
      <script src="json/Info Legos.js"></script>
+     <script src="js/compra.js"></script>
+     <script src="js/notify.min.js"></script>
 </body>
 
 </html>
