--- a/lista-productos.html
+++ b/lista-productos.html
@@ -158,7 +158,7 @@
                         <h1 class="card-title">&dollar;100000</h1>
 
                         <div class="d-grid gap-2">
-                                <button id="cart-button" type="button" class="btn btn-lg btn-primary w-100">Add to cart</button>
+                                <button type="button" class="btn btn-lg btn-primary w-100">Add to cart</button>
 
                         </div>
 
