Guardado por funcionalidad del carrito
Co-authored-by: GeraldJes <GeraldJes@users.noreply.github.com>

--- a/detalle-productos.html
+++ b/detalle-productos.html
@@ -197,8 +197,10 @@
     <!-- Js -->
     <script src="json/Info Legos.js"></script>
     <script src="json/Reseñas.js"></script>
+    
     <script src="js/detalle-legos.js"></script>
-
+    <script src="js/notify.min.js"></script>
+    
 </body>
 
 </html>
