--- a/contacto.html
+++ b/contacto.html
@@ -4,16 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contacto</title>
+    <link rel="stylesheet" href="css/contacto.css">
+    <link rel="stylesheet" href="./css/main-style.css">
     <!-- Link boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/main-style.css">
-    <link rel="stylesheet" href="css/producto.css">
-    <title>Shop</title>
+    <!-- css leaflet -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+        integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <!-- Make sure you put this AFTER Leaflet's CSS -->
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 </head>
 
 <body>
-
     <!-- As a heading -->
     <header>
         <nav class="navbar navbar-expand-lg bg-dark p-3">
@@ -79,98 +84,127 @@
 
         </div>
     </nav>
+    <main class="main-contact">
+        <div class="container-contacto">
+            <div class="formulario-container">
+                <form class="form" id="form">
+                    <h3>Contact Us</h3>
 
-    <main class="container-fluid p-3">
-        <!-- Inicio filtros -->
+                    <label for="name">Full name:</label>
+                    <input type="text" id="name" class="box">
+                    <p id="error-message" style="color:red; display:none;">Please insert a valid full name</p>
 
-        <!-- SEGUNDO FILTRO QUE NO FUNCIONO -->
-        <!-- <div class="d-flex">
-            <div class="input-group mb-3 justify-content-center">          
-                <input type="checkbox" class="btn-check input-group-text" name="options-base" id="option5" autocomplete="off" checked>
-                <label class="btn btn-outline-primary rounded-start" for="option5">Architecture</label>
-    
-                <input type="checkbox" class="btn-check input-group-text" name="options-base" id="option6" autocomplete="off" checked>
-                <label class="btn btn-outline-primary" for="option6">Ideas</label>
-    
-                <input type="checkbox" class="btn-check input-group-text" name="options-base" id="option7" autocomplete="off" checked>
-                <label class="btn btn-outline-primary" for="option7">Star Wars</label>
-            </div> -->
-
-
-        <div class="input-group mb-4 ">
-            <!-- <label for="filter">Filter by category</label> -->
-            <select id="filter" class="form-select form-select-sm w-20 fs-5">
-                <option value="all">All</option>
-                <!-- Opciones de estado se añadirán dinámicamente aquí -->
-            </select>
-        </div>
-        <!--  </div> -->
-
-        <!-- Fin filtros -->
-
-        <!-- Inicio contenedor -->
-        <div id="lego-list" class="row row-cols-1 row-cols-sm-2 row-cols-md-4 g-4">
-            <!--Inicio carta-->
-            <div class="col">
-                <div class="card shadow-sm text-center">
-                    <!-- Inicio Carrusel -->
-                    <div id="carouselExample" class="carousel slide">
-                        <div class="carousel-indicators">
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                class="active" aria-current="true" aria-label="Slide 1"></button>
-                            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                aria-label="Slide 2"></button>
-                        </div>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active container-img">
-                                <a href="">
-                                    <img src="img/image-not-found.jpg" class="d-block w-100" alt="image-not-found">
-                                </a>
-                            </div>
-
-                            <div class="carousel-item container-img">
-                                <a href="">
-                                    <img src="img/image-not-found.jpg" class="d-block w-100" alt="image-not-found">
-                                </a>
-                            </div>
-                        </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                            data-bs-slide="prev">
-                            <span class="carousel-control-prev-icon bg-secondary rounded-circle"
-                                aria-hidden="true"></span>
-                            <span class="visually-hidden">Previous</span>
-                        </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                            data-bs-slide="next">
-                            <span class="carousel-control-next-icon bg-secondary rounded-circle"
-                                aria-hidden="true"></span>
-                            <span class="visually-hidden">Next</span>
-                        </button>
+                    <label for="gender-radios">Select your gender:</label>
+                    <div class="form-check" id="gender-radios">
+                        <input type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                        <label class="form-check-label" for="inlineRadio1">Masculine</label>
                     </div>
-                    <!-- Fin carrusel -->
-                    <div class="card-header">
-                        <h4 class="card-title title-excesive link-animation">Title Lego</h4>
+                    <div class="form-check">
+                        <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                        <label class="form-check-label" for="inlineRadio2">Femenine</label>
+                    </div>
+                    <div class="form-check">
+                        <input type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2" checked>
+                        <label class="form-check-label" for="inlineRadio2">Other</label>
                     </div>
 
-                    <div class="card-body">
-                        <div class="d-flex justify-content-evenly">
-                            <p class="card-title">Item:</p>
-                            <p class="card-title">Review: </p>
+                    <label for="birth-date">Birth date:</label>
+                    <input type="date" id="birth-date" class="box">
+                    <p id="date-warning" style="color:red; display:none;"></p>
+
+                    <label for="email" class="form-label">Email address:</label>
+                    <input type="email" class="box" id="email" placeholder="name@example.com">
+                    <p id="email-warning" style="color:red; display:none;">Please insert a valid email. Example:
+                        name@gmail.com</p>
+
+                    <label for="affair">Affair:</label>
+                    <input type="affair" id="affair" class="box">
+                    <p id="affair-warning" style="color:red; display:none;">The subject field cannot be empty</p>
+
+                    <label for="message">Message:</label>
+                    <textarea class="box" id="message" cols="30" rows="10"></textarea>
+
+                    <!--<label for="select">Province:</label>
+                    <select name="provincias" id="" class="box">
+                        <option" value="Alajuela">Alajuela</option>
+                        <option value="San José">San José</option>
+                        <option value="Cartago">Cartago</option>
+                        <option value="Puntarenas">Puntarenas</option>
+                        <option value="Guanacaste">Guanacaste</option>
+                        <option value="Heredia">Heredia</option>
+                        <option value="Limón"></option>
+                    </select>-->
+
+                    <label for="options" class="form-label">Select a project (Optional):</label>
+                    <select id="options" name="options" class="box">
+                        <option value="opcion1">None</option>
+                        <option value="opcion2">Lego Insiders</option>
+                        <option value="opcion3">Lego MindStorms</option>
+                        <option value="opcion4">Lego Japan</option>
+                    </select>
+
+                    <input type="submit" value="Send" class="submit">
+                </form>
+            </div>
+            <div class="modal fade" id="success-message-modal" tabindex="-1" aria-labelledby="exampleModalLabel"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" id="exampleModalLabel">¡Form successfully submitted!</h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
-
-
-                        <h1 class="card-title">&dollar;100000</h1>
-
-                        <div class="d-grid gap-2">
-                            <button type="button" class="btn btn-lg btn-primary w-100">Add to cart</button>
-
+                        <div class="modal-body">
+                            We will try to respond as soon as possible
                         </div>
-
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-primary" data-bs-dismiss="modal">OK</button>
+                        </div>
                     </div>
                 </div>
-            </div> <!--Fin carta-->
+            </div>
+
+            <div class="info">
+
+                <div class="location">
+                    <div id="map">
+
+                    </div>
+                    <div class="icons">
+                        <div class="icons-title">
+                            <i class="fa-solid large fa-location-dot"></i>
+                            <h2>Location: </h2>
+                        </div>
+                        <p>San José, Escazú Avenue, next to Hospital CIMA San José</p>
+                    </div>
+                    <div class="icons">
+                        <div class="icons-title">
+                            <i class="fa-solid large fa-phone"></i>
+                            <h2>Phone numbers:</h2>
+                        </div>
+                        <p>+506 6030 4366</p>
+                        <p>+506 8599 2121</p>
+                    </div>
+
+                    <div class="icons">
+                        <div class="icons-title">
+                            <i class="fa-solid large fa-envelope"></i>
+                            <h2>Email address:</h2>
+                        </div>
+                        <p>lego@gmail.com</p>
+                    </div>
+
+                    <div class="icons">
+                        <div class="icons-title">
+                            <i class="fa-solid large fa-calendar-days"></i>
+                            <h2>Timetable:</h2>
+                        </div>
+                        <p>Monday to friday from 7:00 a:m to 4:00 p:m</p>
+                    </div>
+                    <img src="./img/Contacto/form-pic.jpg" alt="">
+                </div>
+            </div>
         </div>
-        <!--Fin Card-->
     </main>
     <footer class="pie-pagina">
         <div class="grupo-1">
@@ -244,22 +278,13 @@
         <div class="grupo-2">
           <small>&copy; 2024 <b>Lego</b> - All rights reserved </small>
         </div>
-      </footer>
-
-    <!-- Boostrap -->
+    </footer>
+    <script src="js/mapa-contacto.js"></script>
+    <script src="js/validacion-form-contacto.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.js"
-        integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
-    <!-- Js -->
-    <script src="js/lista-legos.js"></script>
-    <script src="json/Info Legos.js"></script>
-    <script src="js/compra.js"></script>
-    <script src="js/notify.min.js"></script>
-    <script src="js/buscador.js"></script>
-
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
+    <script src="https://kit.fontawesome.com/81581fb069.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
